tests/snapshots/snapshot_golden_comprehensive__receipt_artifact_ref.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "ArtifactRef { kind: \"patch\".into(), path: \"output.patch\".into(), }"
---
{
  "kind": "patch",
  "path": "output.patch"
}
