tests/snapshots/snapshot_golden_comprehensive__receipt_builder_with_outcome.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: r
---
{
  "meta": {
    "run_id": "[uuid]",
    "work_order_id": "00000000-0000-0000-0000-000000000000",
    "contract_version": "abp/v0.1",
    "started_at": "[timestamp]",
    "finished_at": "[timestamp]",
    "duration_ms": 0
  },
  "backend": {
    "id": "test-backend",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "failed",
  "receipt_sha256": null
}
