tests/snapshots/snapshot_golden_comprehensive__receipt_full_structure.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: v
---
{
  "artifacts": [
    {
      "kind": "patch",
      "path": "output.patch"
    }
  ],
  "backend": {
    "adapter_version": "1.2.0",
    "backend_version": "3.0.0",
    "id": "sidecar:node"
  },
  "capabilities": {
    "extended_thinking": "unsupported",
    "mcp_client": {
      "restricted": {
        "reason": "experimental feature"
      }
    },
    "streaming": "native",
    "tool_bash": "native",
    "tool_edit": "native",
    "tool_glob": "native",
    "tool_grep": "native",
    "tool_read": "native",
    "tool_use": "emulated",
    "tool_write": "native"
  },
  "meta": {
    "contract_version": "abp/v0.1",
    "duration_ms": 300000,
    "finished_at": "2025-07-01T12:05:00Z",
    "run_id": "00000000-0000-4000-8000-000000000001",
    "started_at": "2025-07-01T12:00:00Z",
    "work_order_id": "00000000-0000-4000-8000-000000000002"
  },
  "mode": "mapped",
  "outcome": "complete",
  "receipt_sha256": null,
  "trace": [
    {
      "message": "run started",
      "ts": "2025-07-01T12:00:00Z",
      "type": "run_started"
    },
    {
      "message": "run completed",
      "ts": "2025-07-01T12:05:00Z",
      "type": "run_completed"
    }
  ],
  "usage": {
    "cache_read_tokens": 100,
    "cache_write_tokens": 50,
    "estimated_cost_usd": 0.015,
    "input_tokens": 1200,
    "output_tokens": 800,
    "request_units": 2
  },
  "usage_raw": {
    "completion_tokens": 800,
    "prompt_tokens": 1200
  },
  "verification": {
    "git_diff": "diff --git a/src/auth.rs b/src/auth.rs",
    "git_status": "M src/auth.rs",
    "harness_ok": true
  }
}
