tests/snapshots/snapshot_golden_comprehensive__receipt_run_metadata.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: meta
---
{
  "run_id": "00000000-0000-4000-8000-000000000001",
  "work_order_id": "00000000-0000-4000-8000-000000000002",
  "contract_version": "abp/v0.1",
  "started_at": "2025-07-01T12:00:00Z",
  "finished_at": "2025-07-01T12:05:00Z",
  "duration_ms": 300000
}
