tests/snapshots/snapshot_golden_comprehensive__receipt_usage_normalized_default.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "UsageNormalized::default()"
---
{
  "input_tokens": null,
  "output_tokens": null,
  "cache_read_tokens": null,
  "cache_write_tokens": null,
  "request_units": null,
  "estimated_cost_usd": null
}
