tests/snapshots/snapshot_golden_comprehensive__receipt_verification_default.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "VerificationReport::default()"
---
{
  "git_diff": null,
  "git_status": null,
  "harness_ok": false
}
