tests/snapshots/snapshot_golden_comprehensive__receipt_with_artifacts.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: r
---
{
  "meta": {
    "run_id": "00000000-0000-4000-8000-000000000003",
    "work_order_id": "00000000-0000-4000-8000-000000000001",
    "contract_version": "abp/v0.1",
    "started_at": "2025-07-01T12:00:00Z",
    "finished_at": "2025-07-01T12:00:00Z",
    "duration_ms": 0
  },
  "backend": {
    "id": "mock",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [
    {
      "kind": "patch",
      "path": "fix.patch"
    },
    {
      "kind": "log",
      "path": "run.log"
    },
    {
      "kind": "diff",
      "path": "changes.diff"
    }
  ],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "complete",
  "receipt_sha256": null
}
